# AIDDcomp

./: .gitignore  LICENSE  README.md  inference.py  pyproject.toml  requirements.yaml  setup.py  test_tasks.csv
dataset/: test_data.csv
gps/: encoders.py  featurizer.py  layers.py  model.py  taskhead.py  transforms.py
results/: test_output.csv
